force-app/main/default/objects/GDPR_Audit__c/GDPR_Audit__c.object-meta.xml
<CustomObject>
    <description>Used to track GDPR field history changes syncing from Pardot.</description>
    <label>GDPR Audit</label>
    <nameField>
        <label>GDPR Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDPR Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>