force-app/main/default/objects/GDPR_Audit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GDPR Audits</relationshipLabel>
    <relationshipName>GDPR_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>