force-app/main/default/objects/GDPR_Audit__c/fields/Double_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Double Opt-In</label>
    <type>Checkbox</type>
</CustomField>