force-app/main/default/objects/GDPR_Audit__c/fields/Double_Opt_In_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In_Timestamp__c</fullName>
    <label>Double Opt-In Timestamp</label>
    <type>Date</type>
</CustomField>