force-app/main/default/objects/GDPR_Audit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Lead.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>GDPR Audits</relationshipLabel>
    <relationshipName>GDPR_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>