force-app/main/default/objects/GDPR_Audit__c/fields/Lead_Source_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Tracking__c</fullName>
    <label>Lead Source Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>