force-app/main/default/objects/GDPR_Audit__c/fields/Pardot_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Last_Activity__c</fullName>
    <description>The date and time a prospect last interacted with your Pardot marketing assets. The field updates when a prospect performs activities such as page visits, form submissions, link clicks, and file downloads. Any prospect activity except for an email open updates the Last Activity field.</description>
    <inlineHelpText>The date and time a prospect last interacted with your Pardot marketing assets. The field updates when a prospect performs activities such as page visits, form submissions, link clicks, and file downloads. Any prospect activity except for an email open updates the Last Activity field.</inlineHelpText>
    <label>Pardot Last Activity</label>
    <type>DateTime</type>
</CustomField>