force-app/main/default/objects/GDPR_Audit__c/fields/Privacy_Notice__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Opt-In</label>
    <type>Checkbox</type>
</CustomField>