force-app/main/default/objects/GDPR_Audit__c/fields/Version_Privacy_Notice__c.field-meta.xml
<CustomField>
    <fullName>Version_Privacy_Notice__c</fullName>
    <label>Version Privacy Notice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>